# Doc-For-Agent-skill

./: .gitignore  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  README.zh.md  landing-page-report.md  package-lock.json  package.json  pyproject.toml  setup.py  skill.json  产品定位文档.md  产品重定位文档.md
.claude/skills/doc-for-agent/: SKILL.md
.cursor/skills/doc-for-agent/: SKILL.md
.github/workflows/: ci.yml  release.yml
AGENTS/: AGENTS.md
AGENTS.zh/: AGENTS.md
AGENTS.zh/00-entry/: AGENTS.md
AGENTS.zh/01-product/: 001-core-goals.md  002-prd.md  003-app-flow.md
AGENTS.zh/02-architecture/: 004-tech-stack.md  005-frontend-guidelines.md  006-backend-structure.md  007-architecture-compatibility.md
AGENTS.zh/03-execution/: 008-implementation-plan.md
AGENTS.zh/04-memory/: 009-progress.md  010-lessons.md
AGENTS/00-entry/: AGENTS.md
AGENTS/01-product/: 001-core-goals.md  002-prd.md
AGENTS/02-architecture/: 005-frontend-guidelines.md  006-backend-structure.md  007-architecture-compatibility.md
AGENTS/03-execution/: 011-codex-agent-team.md
AGENTS/04-memory/: 009-progress.md
AGENTS/_archive/flat/: README.md  architecture.md  backend.md  frontend.md  glossary.md  product.md  workflows.md
cli/: README.md  docforagent.py  package.json
dfa-doc/AGENTS.zh/00-entry/: AGENTS.md
dfa-doc/AGENTS.zh/01-product/: 001-core-goals.md  002-prd.md  003-app-flow.md
dfa-doc/AGENTS.zh/04-memory/: 009-progress.md  (+1 more)
dfa-doc/handbook/: architecture.md  overview.md  workflows.md
dfa-doc/handbook.zh/: architecture.md  glossary.md  overview.md  workflows.md
doc-for-agent/: SKILL.md  package.json
doc-for-agent/agents/: openai.yaml
doc-for-agent/installer/: __init__.py  __main__.py  docagent.py  sync_assets.py
doc-for-agent/references/: agents-structure.md  layered-agents-blueprint.md
doc-for-agent/scripts/: init_agents_docs.py  render_platform_adapter.py
doc-for-agent/templates/: product.json
doc-for-agent/tests/: snapshots.json  verify_generator_snapshots.py
docs/: architecture.md  landing-page.md  landing-page.zh.md  maintainer-workflow.md  maintainers.md  overview.md  platform-architecture.md  platform-targets.md  platforms.md  platforms.zh.md  quickstart.md  quickstart.zh.md  release-workflow.md  source-of-truth.md  workflows.md  worktree-collaboration.md  worktree-collaboration.zh.md
docs.zh/: architecture.md  overview.md  workflows.md
human/: architecture.md  glossary.md  overview.md  workflows.md
human.zh/: architecture.md  glossary.md  overview.md  workflows.md
landing/: index.html  package-lock.json  package.json  vite.config.js
landing/src/: App.jsx  main.jsx  styles.css
scripts/: sync_platform_adapters.py  verify_product_metadata.py
src/doc_for_agent/: __init__.py  installer.py
(+121 files in other folders)
