[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-for-agent-cli"
dynamic = ["version"]
description = "Platformized installer and maintenance CLI for the doc-for-agent skill."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  {name = "Tim Cai"}
]
scripts = { docforagent = "doc_for_agent.installer:main" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "doc_for_agent.version.__version__"}

[tool.setuptools.package-data]
doc_for_agent = [
  "references/*.md",
  "scripts/*.py",
  "platforms/*/SKILL.md",
  "platforms/codex/agents/*.yaml",
  "assets/templates/*.md",
  "assets/examples/*.md",
  "templates/*.md",
  "templates/bodies/*.md"
]
