[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-for-agent"
version = "0.2.0.dev0"
description = "Installable unified docagent CLI for platform init, install, and AGENTS generation flows."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "doc-for-agent contributors" }]
keywords = ["ai", "agents", "documentation", "installer", "codex", "claude", "continue"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
docagent = "installer.docagent:cli"

[tool.setuptools]
packages = ["installer"]
package-dir = { "" = "doc-for-agent" }
include-package-data = true

[tool.setuptools.package-data]
installer = ["assets/**/*"]
